--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portafolio — Hillary Malespín Ulloa</title>
   <meta name="description" content="Portafolio académico y profesional de Hillary Malespín Ulloa." />
-  <link rel="canonical" href="https://tu-sitio.netlify.app/" />
+  <link rel="canonical" href="hillarymalespinportafolio.netlify.app" />
   <meta name="theme-color" content="#0f172a" />
 
   <!-- CSS en orden de cascada -->
@@ -15,21 +15,6 @@
   <link rel="stylesheet" href="./styles/overrides.css">
   <link rel="stylesheet" href="./styles/print.css" media="print">
 
-  <!-- Datos estructurados -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Hillary Malespín Ulloa",
-    "jobTitle": "Estudiante de Ingeniería en Computación",
-    "url": "https://tu-sitio.netlify.app",
-    "image": "./img/me.png",
-    "sameAs": [
-      "https://www.linkedin.com/in/hillarymalespin",
-      "https://github.com/hillarymalespin"
-    ]
-  }
-  </script>
 </head>
 <body>
   <!-- Anclas invisibles para conmutar tema -->
