Sección personalizada: Experiencia laboral

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/components.css">
-    <link rel="stylesheet" href="styles/recomendacionStyle.css">
+  <link rel="stylesheet" href="styles/recomendacionStyle.css">
+  <link rel="stylesheet" href="styles/experiencia.css">
+
 
 
   <!-- JSON-LD Schema -->
@@ -67,6 +69,11 @@
       <div id="about-content"></div>
     </section>
 
+    <section id="experiencia" class="experiencia">
+      <h2>Experiencia Laboral</h2>
+      <div id="lista-experiencia" class="lista-experiencia"></div>
+    </section>
+
     <!-- Sección recomendaciones -->
     <section id="recomendaciones" class="recomendaciones">
       <h2>Recomendaciones de compañeros</h2>
@@ -92,6 +99,7 @@
   <script src="js/main.js" defer></script>
   <script src="js/theme.js" defer></script>
   <script src="js/recomendaciones.js"></script>
+  <script src="js/experiencia.js"></script>
 
 
 </body>
