--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,8 @@
           <li><a href="#introduccion">About Me</a></li>
           <li><a href="proyectos.html">Projects</a></li>
           <li><a href="#contacto">Contact</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#recommendation">Recommendation</a></li>
         </ul>
       </nav>
     </div>
