Sección personalizada: journey

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="styles/components.css">
   <link rel="stylesheet" href="styles/recomendacionStyle.css">
   <link rel="stylesheet" href="styles/experiencia.css">
+    <link rel="stylesheet" href="styles/journey.css">
 
   <!-- JSON-LD Schema -->
   <script type="application/ld+json">
@@ -79,7 +80,34 @@
       </div>
 
       <div id="lista-experiencia" class="lista-experiencia"></div>
-    </section>
+        </section>
+
+    <!-- Journey Section -->
+      <section id="journey" class="section">
+        <h2>My Journey at TEC</h2>
+        <div class="timeline">
+          <div class="timeline-item" data-aos="fade-up">
+            <span class="year">2021</span>
+            <p>I began my studies in Computer Engineering at TEC. My first contact with programming came through <strong>Python</strong>, where I learned the basics of logic, algorithms, and problem-solving.</p>
+          </div>
+          <div class="timeline-item" data-aos="fade-up">
+            <span class="year">2022</span>
+            <p>I discovered the power of <strong>object-oriented programming</strong> with <strong>Java</strong>. I also strengthened my foundation with courses such as <em>Discrete Mathematics</em> and <em>Data Structures</em>.</p>
+          </div>
+          <div class="timeline-item" data-aos="fade-up">
+            <span class="year">2023</span>
+            <p>This year I explored more complex systems — from <strong>Computer Architecture</strong> to <strong>Algorithm Analysis</strong>. Each subject helped me understand how hardware and software interact efficiently.</p>
+          </div>
+          <div class="timeline-item" data-aos="fade-up">
+            <span class="year">2024–2025</span>
+            <p>I delved into advanced areas like <strong>Software Security</strong>, <strong>Quality Assurance (QA)</strong>, and <strong>Operating Systems</strong>. I also began applying what I learned to real projects, developing both web and mobile applications.</p>
+            <p>Today, I continue growing as a developer and aspiring engineer — learning new technologies, building impactful projects, and exploring the intersection of software, design, and innovation.</p>
+          </div>
+        </div>
+      </section>
+
+              
+
 
     <!-- Recommendations Section -->
     <section id="recomendaciones" class="recomendaciones">
