--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,37 @@
         </div>
       </section>
 
+      <section id="future-goals" class="section">
+        <h2>Future Goals</h2>
+        <p class="intro">
+          As I continue my journey as a computer engineer, I’m deeply motivated to keep exploring, learning, and building. 
+          These are some of the areas I’d love to focus on in the coming years:
+        </p>
+
+        <div class="goals-container">
+          <div class="goal-card" data-aos="fade-up">
+            <h3>🧠 Artificial Intelligence</h3>
+            <p>The world is changing and we need to change with them. I want to deepen my knowledge of AI and develop smarter systems, from predictive models to AI-based assistants.</p>
+          </div>
+
+          <div class="goal-card" data-aos="fade-up" data-aos-delay="150">
+            <h3>🤖 Cybersecurity</h3>
+            <p>Understanding vulnerabilities and protecting systems is essential. I want to keep learning about cybersecurity and ethical hacking practices.</p>
+          </div>
+
+          <div class="goal-card" data-aos="fade-up" data-aos-delay="300">
+            <h3>📊 Data & Research</h3>
+            <p>I’d love to contribute to research on software quality and computational efficiency, and perhaps publish my first paper.</p>
+          </div>
+
+          <div class="goal-card" data-aos="fade-up" data-aos-delay="450">
+            <h3>🚀 Innovation & Real Impact</h3>
+            <p>My dream is to design technology that helps real people. Combining creativity, accessibility, and engineering precision.</p>
+          </div>
+        </div>
+      </section>
+
+
               
 
 
